# ChangeLog for dev-perl/Net-Daemon
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-Daemon/ChangeLog,v 1.85 2014/01/23 21:10:22 maekke Exp $

  23 Jan 2014; Markus Meier <maekke@gentoo.org> Net-Daemon-0.480.0-r1.ebuild:
  arm stable, bug #492194

  20 Jan 2014; Mike Frysinger <vapier@gentoo.org> Net-Daemon-0.480.0-r1.ebuild,
  Net-Daemon-0.480.0.ebuild:
  Add arm64 love.

  20 Jan 2014; Agostino Sarubbo <ago@gentoo.org> Net-Daemon-0.480.0-r1.ebuild:
  Stable for ppc, wrt bug #492194

  20 Jan 2014; Jeroen Roovers <jer@gentoo.org> Net-Daemon-0.480.0-r1.ebuild:
  Stable for HPPA (bug #492194).

  29 Dec 2013; Andreas K. Huettel <dilfridge@gentoo.org>
  Net-Daemon-0.480.0.ebuild:
  Drop unstable arches to unstable keywords

*Net-Daemon-0.480.0-r1 (12 Sep 2013)

  12 Sep 2013; Ian Delaney <idella4@gentoo.org> +Net-Daemon-0.480.0-r1.ebuild:
  revbump -> EAPI 5

  01 Sep 2012; Fabian Groffen <grobian@gentoo.org> Net-Daemon-0.480.0.ebuild:
  Marked ~ppc-aix, bug #432288

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  09 May 2012; Alexis Ballier <aballier@gentoo.org> Net-Daemon-0.480.0.ebuild:
  keyword ~amd64-fbsd

  31 Mar 2012; Torsten Veller <tove@gentoo.org> -Net-Daemon-0.43.ebuild:
  Cleanup

  18 Mar 2012; Raúl Porcel <armin76@gentoo.org> Net-Daemon-0.480.0.ebuild:
  ia64/m68k/s390/sh/sparc stable wrt #396935

  02 Mar 2012; Brent Baude <ranger@gentoo.org> Net-Daemon-0.480.0.ebuild:
  Marking Net-Daemon-0.480.0 ppc64 for bug 396935

  25 Feb 2012; Tobias Klausmann <klausman@gentoo.org>
  Net-Daemon-0.480.0.ebuild:
  Stable on alpha, bug #396935

  16 Feb 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  Net-Daemon-0.480.0.ebuild:
  x86 stable wrt bug #396935

  08 Feb 2012; Markus Meier <maekke@gentoo.org> Net-Daemon-0.480.0.ebuild:
  arm stable, bug #396935

  08 Feb 2012; Jeroen Roovers <jer@gentoo.org> Net-Daemon-0.480.0.ebuild: