@@ -2,14 +2,15 @@
 Hash: SHA256
 
 DIST Net-Daemon-0.48.tar.gz 29513 SHA256 3c12f1e44f9bbce427204a83dd73aa6dd2909e91190d32d6ec3563beca7bbc74 SHA512 85bc280adc0de6be8ebd64771732f83299018edd06441cf96c438914a16c3805918805cde07bae4fe92caa86475ad35cabfc1edfccff117dcce7f5dc8b137bba WHIRLPOOL 3fb6ec798124077180412f417986eb40ed47b3e6b04002710578436907f5a381fe4e92accfbdf0448bc00b83c28306b63c81a0314edcf255439c2541df25d125
-EBUILD Net-Daemon-0.480.0-r1.ebuild 671 SHA256 b90a359209e6064e77f42dedf4b36fd506c57abe1c2c811f4317a8a691793daa SHA512 63fedefd16a2e940e35fe0743c6a66760f6725f6b6c784396d1a47ccb0678ec063147f84613e7fe208c3ca0d11c4e442b74044f324d7f74ab4149d85e629fdbe WHIRLPOOL 4c71d12fd31476f09583ac2869408a2ef6688f70329daf1fb415fd4eabb1bee1ca7b048bdaa8e656d7e5d74b0d3066e7e62172b840e93c910b9e58d4f83b1dbf
-EBUILD Net-Daemon-0.480.0.ebuild 644 SHA256 cfac2a79d1f52255a5bfeac4d5119081e68ea169a09db15a216c4c260abc3456 SHA512 1119c38d5875bd6989bdd8f07d5905cc34b84cba7b7309efd44dcf561cc575566f83b43d6da3f1a1852a8cca56e18b1dcbf7d7729404c237bbb1a12e29d2e95f WHIRLPOOL d4939caf9530533c6a9aac5e672dd5525f9df41f91e2c887654bcf1f94d2c5029f1ab5e7b0134082010022e2f880f5d3b63af8f916b79269bda244bbbf7c91fd
-MISC ChangeLog 8917 SHA256 277a898c421eede92dbefd018c71af56878465627a4039cedb705a1295abfb29 SHA512 6ade9dcd989b378d365f3dbfc268bfb770a72fca2ec7c5dd9b473a7283a09f379cc7f3fc19836c64366fcf8a7ea6329ddd1e35af964b802b190b808b41addc96 WHIRLPOOL 8676f15f9afc77c55e6a9a0c4224725e15bc3bae394991bd559bb7367b02f00d6b1da505bde978d4952c92c8b0d65c0db01848ff19619b1fae4048cbac58268c
+EBUILD Net-Daemon-0.480.0-r1.ebuild 666 SHA256 b8eb44053c992adce0037a33e80e856931a0144893011d96818ac0d37299c58d SHA512 6baa9d7e895ea78e2fc778a6212f7180346adfcfc17d206f6341feb1cde265333d4a4cc38124de4624f478014b78b209174517613a9dcc94f164b1ba612d721d WHIRLPOOL a0d07a0df482ee49005e756875923a50214e497fa5d0c706e85072b31e3603537641d375dd33a680078d13e8ec76e749a2fae4d4f4184ab8dae668415ee4b373
+MISC ChangeLog 9098 SHA256 d027b0825cd9c9275c94f6ef3748475e7bf409315a8ed3e2850efb6222c0f4c4 SHA512 5cac1d4378c20ecdaacb940a6735643d560f1ca23054fa812ee818237276da7bf7ad202c05121966e4e0a89500a06f9875e1991ef7ec57634388b5aca952f389 WHIRLPOOL 10f4e089a35d303c98510849cae602c06a6de2e834b1dd57661ffecd3b992dcb125f108663453abc6e5aeebb0e4a3ddf555267baad98467799433e3c992a8bc0
 MISC metadata.xml 562 SHA256 e597eafacf2943763a7b5d621f3f3ebfe3cbd2a4205e4ab48c65e5bb144052a8 SHA512 5c5d6f2f1a3530dffd8ee17946958b69f9ad44929813ef2b2ca2e0e0d65b614ef009657b1d2e815778816fa8e666b613130c67995067e79804c61859e1d41a32 WHIRLPOOL 21b98e7bfbad9f686a8cf535fb84a2427a4c2b8e1fccb73eb0d9bf965b32aaee0cb26706f2aa052666d936df914198628e2d652d43f2c6631b89486919fe1a05
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlLhhuwACgkQkKaRLQcq0GKtVgCfaxOv+PXK8WW9mXcb2lpu81nT
-VecAn0WiRzyEfKDrrJoyR0GIXv0Ivm0o
-=KFyp
+iJwEAQEIAAYFAlLiQwkACgkQG9wOWsQutdbK/gQA21NOion6bwLaZZt94faz6g+Z
+rdfwKYkIzCIqgEmpVjBypYPtTBx7vWeL87cl6M1xrNlJ2GmLbhs1MBORzooPT2fN
+Mv8aM8zF8YZk6BFb9fTqT/VzVH5aniWF0Ck8bza52SzZL6DHAGHP0DXfl8zaGlJx
+yzJq6AI/7+Jn8oalwv8=
+=FPDG
 -----END PGP SIGNATURE-----
