@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Net-Daemon
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-Daemon/ChangeLog,v 1.85 2014/01/23 21:10:22 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-Daemon/ChangeLog,v 1.86 2014/01/24 10:34:16 zlogene Exp $
+
+  24 Jan 2014; Mikle Kolyada <zlogene@gentoo.org> -Net-Daemon-0.480.0.ebuild,
+  Net-Daemon-0.480.0-r1.ebuild:
+  alpha/amd64/ia64/ppc64/sparc/x86 stable wrt bug #492170; Drop old.
 
   23 Jan 2014; Markus Meier <maekke@gentoo.org> Net-Daemon-0.480.0-r1.ebuild:
   arm stable, bug #492194
